syntax = "proto3";
package post.operations.v1;
option go_package = "post.operations.v1";

message Post {
  int64 id = 1;
  int64 user_id = 2;
  string title = 3;
  string body = 4;
}

message ReadPostRequest {
  int64 PostId = 1;
}

message ReadPostResponse {
  Post Post = 1;
}

message UpdatePostRequest {
  int64 PostId = 1;
  Post Post = 2;
}

message UpdatePostResponse {
  Post Post = 1;
}

message DeletePostRequest {
  int64 PostId = 1;
}

message DeletePostResponse {
  int64 PostId = 1;
}

message ListPostsRequest {
  int64 Limit = 1;
  int64 Skip = 2;
}

message ListPostsResponse {
  Post Post = 1;
}


service PostOperationsService {
  rpc ReadPost (ReadPostRequest) returns (ReadPostResponse) {}; // if not found returns NOT_FOUND response
  rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse) {}; // if not found returns NOT_FOUND response
  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse) {}; // if not found returns NOT_FOUND response
  rpc ListPosts (ListPostsRequest) returns (stream ListPostsResponse) {};
}